# march-madness

./: .gitignore  AGENTS.md  LICENSE  README.md  asgi.py  lint_all.sh  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_app.py  run_teamrankings_scrapers.py  setup.cfg  start_server.bat  start_server.sh  update_requirements.bat
core/: apps.py  tests.py  urls.py  views.py
march_madness/: __init__.py  settings.py  urls.py  wsgi.py
scraper/: __init__.py  aggregator.py  apps.py  scores_scraper.py  task_manager.py  test_score_utils.py  test_task_manager.py  test_utils.py  test_views.py  tests.py  tr_scraper.py  trank_scraper.py  urls.py  utils.py  views.py
src/: __init__.py
src/api/: views.py
src/config/: definitions.py  env_config.py  logger_config.py
src/errors/: views.py
src/utils/: utils.py
static/css/: style.css
templates/: index.html
tests/: __init__.py  test_app.py  test_shim.py
