[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "march-madness"
version = "0.1.0"
description = "March Madness Data Scraper and Analyzer"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4",
    "coloredlogs",
    "django",
    "django-cors-headers",
    "lxml",
    "pandas",
    "requests",
]

[project.optional-dependencies]
autocomplete = ["argcomplete>=3.6.3"]
vision-transformers = ["timm>=1.0.24"]

[project.scripts]
image-scoring = "march_madness.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["march_madness"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = [
    "B",   # flake8-bugbear rules
    "C4",  # flake8-comprehensions rules
    "D",   # pydocstyle rules
    "E",   # pycodestyle errors
    "F",   # pyflakes rules
    "I",   # isort rules
    "N",   # pep8-naming rules
    "S",   # bandit security rules
    "SIM", # flake8-simplify rules
    "UP",  # pyupgrade rules
    "W",   # pycodestyle warnings
]
lint.ignore = [
    "D203", # Conflicts with D211 (no-blank-line-before-class)
    "D213", # Conflicts with D212 (multi-line-summary-first-line)
]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Use of assert is standard in pytest

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["core", "scraper", "tests"]
DJANGO_SETTINGS_MODULE = "march_madness.settings"
addopts = [
    "-ra",              # show extra summary for (s)kipped, (x)failed
    "--strict-markers",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["march_madness"]
omit = ["config.py", "config-*.py", "*/config.py", "*/config-*.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
